--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,10 +22,13 @@
             <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
             <small class="text-muted">Donec id elit non mi porta.</small>
           </a>
+         </div>
+         <br>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Create a Category</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter name of category">
+          <small id="emailHelp" class="form-text text-muted">A category is unique</small>
         </div>
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
       </div>
     </div>
   </div>
