--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
   <div class="mx-auto order-1">
     <ul class="navbar-nav mx-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
+      <li class="nav-item">
+          <%= link_to "All", lists_path, class:'nav-link' %>
+        </li>
       <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Category", new_category_path, class:'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "List", new_list_path, class:'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Item", new_item_path, class:'nav-link' %>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Archived</a>
         </li>
       <% end %>
     </ul>
   </div>
-
   <div class="navbar-collapse collapse w-100 order-3">
     <% unless user_signed_in? %>
       <ul class="navbar-nav ml-auto">
