--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,2 +1,66 @@
-<h1>Lists#new</h1>
-<p>Find me in app/views/lists/new.html.erb</p>
+<div class="row d-flex justify-content-center">
+    <div class="col-md-6">
+      <div class="jumbotron">
+        <p class="lead">Here create your lists</p>
+        <hr class="my-4">
+        <div class="form-group">
+          <%= form_for(@list) do |f| %>
+	          <div class="field">
+              <%= f.label :select_a_category %><br />
+              <%= f.select(:category_id, current_user.categories.collect { |p| [ p.name, p.id ] }, {}, { class: "form-control" }) %>
+            </div>
+            <div class="field">
+              <%= f.label :create_a_list %><br />
+              <%= f.text_field :name, class:'form-control', placeholder:'Enter a list name' %>
+            </div>
+            <small id="emailHelp" class="form-text text-muted">A list is unique</small>
+            <div class="field">
+              <%= f.label :give_a_description %><br />
+              <%= f.text_field :description, class:'form-control', placeholder:'Enter a short description' %>
+            </div>
+            <div class="field">
+              <%= f.hidden_field :user_id, value: current_user.id %>
+            </div>
+            <br />
+            <div class="actions">
+              <%= f.submit class:'btn btn-primary' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+ </div>
+
+<% if !@lists.nil? %>
+<div class="row d-flex justify-content-center">
+  <div class="col-md-6">
+    <div class="jumbotron">
+        <div class="list-group">
+          <% @lists.each do |list| %>
+            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="mb-1">category: <%= Category.find(list.category_id).name %></h5>
+              <h5 class="mb-1">name: <%= list.name %></h5>
+              <small class="text-muted"><%= list.created_at %></small>
+            </div>
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="mb-1">description: <%= list.description %></h5>
+            </div>
+            </a>
+            <div class="d-flex w-100 justify-content-between">
+            <div class="button">
+              <%= link_to 'Destroy', list_path(list), method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %>
+            </div>
+            <div class="button">
+              <%= link_to 'Edit', edit_list_path(list), class:'btn btn-success' %>
+            </div>
+            <div class="button">
+              <%= link_to 'Show', list, class:'btn btn-primary' %>
+            </div>
+          </div>
+         <% end %>
+       </div>
+    </div>
+  </div>
+</div>
+<% end %>
