--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Lists#show</h1>
-<p>Find me in app/views/lists/show.html.erb</p>
+<div class="row d-flex justify-content-center">
+    <div class="col-md-6">
+      <div class="jumbotron">
+        <div class="form-group">
+            <div class="field">
+              category: <%= @category.name %>
+            </div>
+            <div class="field">
+              list: <%= @list.name %>
+            </div>
+            <br/ >
+            <div class="field">
+              description: <%= @list.description %>
+            </div>
+        </div>
+      </div>
+    </div>
+ </div>
+
