--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -23,7 +23,8 @@
     </div>
  </div>
 
- <div class="row d-flex justify-content-center">
+<% if !@categories.nil? %>
+  <div class="row d-flex justify-content-center">
     <div class="col-md-6">
       <div class="jumbotron">
           <div class="list-group">
@@ -46,4 +47,5 @@
          </div>
       </div>
     </div>
- </div>
+  </div>
+<% end %>
