--- a/app/views/pages/archived.html.erb
+++ b/app/views/pages/archived.html.erb
@@ -9,8 +9,8 @@
             <% if item.upfinish? %>
               <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                  <h4 style="color: black">
-                  </style><%= item.name %></h4>
+                  <h4 style="color: black"><%= item.name %></h4>
+                  <h4 style="color: black"><%= item.updated_at %></h4>
                 </li>
               </ul>
               <br />
