add colaboration todolist

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <%= link_to "Archived", archived_path, class:'nav-link' %>
         </li>
+        <li class="nav-item">
+          <%= link_to "Shared", shared_path, class:'nav-link' %>
+        </li>
       <% end %>
     </ul>
   </div>
